Correct capitalisation of CodePen, more project card spacing on mobile

--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -27,6 +27,7 @@
   grid-template-columns: 1fr 1fr;
 
   @media (max-width: 600px) {
+    gap: 3em;
     grid-template-columns: 1fr;
   }
 }
